# opinio-services

./: .env  .gitignore  .vscode  LICENSE  README.md  ReviewSplitting_algorithm.py  Taskfile.yml  app.py  application.py  azure.py  category_splitting.py  final_results.csv  fitscorecalculator.py  flask_script.py  gptscript.ipynb  gptscript.py  mapsRetrieval.ipynb  mongofeeder.py  progress_pearls-deluxe-burgers-san-francisco-3.json  pyproject.toml  reccomendationcreator.py  refactoringprocess.py  requests.ipynb  requirements.txt  reviewSplitting.py  reviewSplittingAlgo.py  reviews.json  run.sh  script.ipynb  secrets.env  sentimentanalysis.py  sentimentreponse.py  soup.html  splittingalgop1.py  testing.ipynb  worker.py  yelp_script.py  youssef_pipeline.py
DATA/: LONG_reviews_for_Hotels.csv  LONG_reviews_for_nightclubs.csv  LONG_reviews_for_physiotherapy or dental care or healthcare.csv  action_items.csv  business_data.json  businesses.csv  businesses_for_Hotels.csv  businesses_for_Restaurants.csv  businesses_for_nightclubs.csv  businesses_for_physiotherapy or dental care or healthcare.csv  businesses_for_physiotherapy.csv  final_results.csv  google_reviews.csv  output.json  response_data.json  response_review_data.json  reviews_for_Aquatic Centers.csv  reviews_for_Gyms.csv  reviews_for_Hair salons or barbers.csv  reviews_for_Nightclubs.csv  reviews_for_Ski resorts.csv  sentiment_reviews.csv  sentiment_reviews_withcount.csv
Modules/: category_splitting.py  create_embeddings.py  fetch_reviews.py  generate_insight.py  generate_insights.py  logger_setup.py  scrape_reviews.py  (+2 more)
(+23 files in other folders)
