[tool.poetry]
name = "opinio-services"
version = "0.1.0"
description = ""
authors = ["Daniel Lima <damorosolima@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.16"
flask = "^3.0.3"
python-dotenv = "^1.0.1"
black = "^24.8.0"
flake8 = "^7.1.1"
pre-commit = "^3.8.0"
ruff = "^0.5.6"
pymongo = "^4.8.0"
pandas = "^2.2.2"
requests = "^2.32.3"
redis = "^5.0.8"
rq = "^1.16.2"
nltk = "^3.8.1"
torch = "^2.4.0"
scikit-learn = "^1.5.1"
llama-index = "^0.10.62"
hdbscan = "^0.8.38.post1"
gensim = "^4.3.3"
textblob = "^0.18.0.post0"
transformers = "^4.44.0"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
